--- a/partials/customers.html
+++ b/partials/customers.html
@@ -21,7 +21,7 @@
                 <td>{{data.email}}</td>
                 <td>{{data.address}}</td>
                 <td>{{data.city}}</td>
-                <td>{{data.country}}</td>
+                <td>{{data.country_id.name}}</td>
                 <td><a href="#/edit-customer/{{data.customerNumber}}" class="btn">&nbsp;<i class="glyphicon glyphicon-edit"></i>&nbsp; Edit Customer</a></td>
             </tr>
         </tbody>
