--- a/partials/edit-customer.html
+++ b/partials/edit-customer.html
@@ -35,65 +35,83 @@
                                 <span ng-show="myForm.name.$dirty && myForm.name.$invalid" class="help-inline">Name Required</span>
                             </div>
                         </div>
-                        <div class="form-group">
-                            <label class="col-md-2"> Email address </label>
-                            <div class="col-md-4">
-                                <input name="email" ng-model="customer.email" type="email" class="form-control"
-                                       placeholder="Enter email" unique-email="" required/>
-                                <span ng-show="myForm.email.$dirty && myForm.email.$invalid && !myForm.email.$error.email"
-                                      class="help-inline">Email Required</span>
-                                <span ng-show="myForm.email.$error.email" class="help-inline">Email is not valid</span>
-                                <span class="hide-while-in-focus" ng-show="myForm.email.$error.unique">Username taken!</span>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-md-2"> Mật khẩu </label>
-                            <div class="col-md-4">
-                                <input name="password" ng-model="customer.password" type="password" class="form-control"
-                                       placeholder="Enter password" ng-minlength="6" ng-maxlength="20" ng-pattern="/(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z])/" required />
-                                <span ng-show="myForm.password.$error.required && myForm.password.$dirty">Required</span>
-                                <span ng-show="!myForm.password.$error.required && (myForm.password.$error.minlength || myForm.password.$error.maxlength) && myForm.password.$dirty">Passwords must be between 8 and 20 characters.</span>
-                                <span ng-show="!myForm.password.$error.required && !myForm.password.$error.minlength && !myForm.password.$error.maxlength && myForm.password.$error.pattern && myForm.password.$dirty">Must contain one lower &amp; uppercase letter, and one non-alpha character (a number or a symbol.)</span>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-md-2"> Xác nhận mật khẩu </label>
-                            <div class="col-md-4">
-                                <input name="password_c" ng-model="customer.password_c" type="password" class="form-control"
-                                       placeholder="Enter password" valid-password-c  required />
-                                <span ng-show="myForm.password_c.$error.required && myForm.password_c.$dirty">Please confirm your password.</span>
-                                <span ng-show="!myForm.password_c.$error.required && myForm.password_c.$error.noMatch && myForm.password.$dirty">Passwords do not match.</span>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-md-2">Ngày sinh </label>
-                            <div class="col-md-4">
-                                <input name="birthday" type="text" ng-model="customer.birthday"
-                                       class="form-control" placeholder="mm-dd-yyyy"
-                                       ng-pattern="/^(0?[1-9]|1[012])-(0?[1-9]|[12][0-9]|3[01])-((19[0-9]{2})|(20[0-1]{1}[0-4]{1}))$/" required>
-                                <span ng-show="myForm.birthday.$error.required && myForm.birthday.$dirty">Required</span>
-                                <span ng-show="!myForm.birthday.$error.required  && myForm.birthday.$error.pattern && myForm.birthday.$dirty">Đúng định dạng</span>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-md-2">Address </label>
-                            <div class="col-md-4">
-                                <input ng-model="customer.address" type="text" class="form-control"
-                                       placeholder="Present Address"/>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-md-2">City </label>
-                            <div class="col-md-4">
-                                <input ng-model="customer.city" type="text" class="form-control"
-                                       placeholder="Current City"/>
-                            </div>
-                        </div>
+                        <!--<div class="form-group">-->
+                            <!--<label class="col-md-2"> Email address </label>-->
+                            <!--<div class="col-md-4">-->
+                                <!--<input name="email" ng-model="customer.email" type="email" class="form-control"-->
+                                       <!--placeholder="Enter email" unique-email="" required/>-->
+                                <!--<span ng-show="myForm.email.$dirty && myForm.email.$invalid && !myForm.email.$error.email"-->
+                                      <!--class="help-inline">Email Required</span>-->
+                                <!--<span ng-show="myForm.email.$error.email" class="help-inline">Email is not valid</span>-->
+                                <!--<span class="hide-while-in-focus" ng-show="myForm.email.$error.unique">Username taken!</span>-->
+                            <!--</div>-->
+                        <!--</div>-->
+                        <!--<div class="form-group">-->
+                            <!--<label class="col-md-2"> Mật khẩu </label>-->
+                            <!--<div class="col-md-4">-->
+                                <!--<input name="password" ng-model="customer.password" type="password" class="form-control"-->
+                                       <!--placeholder="Enter password" ng-minlength="6" ng-maxlength="20" ng-pattern="/(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z])/" required />-->
+                                <!--<span ng-show="myForm.password.$error.required && myForm.password.$dirty">Required</span>-->
+                                <!--<span ng-show="!myForm.password.$error.required && (myForm.password.$error.minlength || myForm.password.$error.maxlength) && myForm.password.$dirty">Passwords must be between 8 and 20 characters.</span>-->
+                                <!--<span ng-show="!myForm.password.$error.required && !myForm.password.$error.minlength && !myForm.password.$error.maxlength && myForm.password.$error.pattern && myForm.password.$dirty">Must contain one lower &amp; uppercase letter, and one non-alpha character (a number or a symbol.)</span>-->
+                            <!--</div>-->
+                        <!--</div>-->
+                        <!--<div class="form-group">-->
+                            <!--<label class="col-md-2"> Xác nhận mật khẩu </label>-->
+                            <!--<div class="col-md-4">-->
+                                <!--<input name="password_c" ng-model="customer.password_c" type="password" class="form-control"-->
+                                       <!--placeholder="Enter password" valid-password-c  required />-->
+                                <!--<span ng-show="myForm.password_c.$error.required && myForm.password_c.$dirty">Please confirm your password.</span>-->
+                                <!--<span ng-show="!myForm.password_c.$error.required && myForm.password_c.$error.noMatch && myForm.password.$dirty">Passwords do not match.</span>-->
+                            <!--</div>-->
+                        <!--</div>-->
+                        <!--<div class="form-group">-->
+                            <!--<label class="col-md-2">Ngày sinh </label>-->
+                            <!--<div class="col-md-4">-->
+                                <!--<input name="birthday" type="text" ng-model="customer.birthday"-->
+                                       <!--class="form-control" placeholder="mm-dd-yyyy"-->
+                                       <!--ng-pattern="/^(0?[1-9]|1[012])-(0?[1-9]|[12][0-9]|3[01])-((19[0-9]{2})|(20[0-1]{1}[0-4]{1}))$/" required>-->
+                                <!--<span ng-show="myForm.birthday.$error.required && myForm.birthday.$dirty">Required</span>-->
+                                <!--<span ng-show="!myForm.birthday.$error.required  && myForm.birthday.$error.pattern && myForm.birthday.$dirty">Đúng định dạng</span>-->
+                            <!--</div>-->
+                        <!--</div>-->
+                        <!--<div class="form-group">-->
+                            <!--<label class="col-md-2">Address </label>-->
+                            <!--<div class="col-md-4">-->
+                                <!--<input ng-model="customer.address" type="text" class="form-control"-->
+                                       <!--placeholder="Present Address"/>-->
+                            <!--</div>-->
+                        <!--</div>-->
+                        <!--<div class="form-group">-->
+                            <!--<label class="col-md-2">City </label>-->
+                            <!--<div class="col-md-4">-->
+                                <!--<input ng-model="customer.city" type="text" class="form-control"-->
+                                       <!--placeholder="Current City"/>-->
+                            <!--</div>-->
+                        <!--</div>-->
                         <div class="form-group">
                             <label class="col-md-2">Country </label>
                             <div class="col-md-4">
-                                <input ng-model="customer.country" type="text" class="form-control"
-                                       placeholder="Residing Country"/>
+                                <select ng-model="customer.country_id"
+                                        ng-options="obj.country_id as obj.name for obj in countries"
+                                        class="form-control"
+                                        name="country_id"
+                                        ng-change="getCountryStates()"
+                                        id="country_id">
+                                    <option value="">-- Choose Country --</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label  class="col-sm-2 control-label">State </label>
+                            <div class="col-sm-7">
+                                <select ng-model="customer.state"
+                                        ng-options="x.state_id as x.name for x in sates"
+                                        class="form-control"
+                                        ng-required="true"
+                                        id="state_id">
+                                    <option value="">-- Choose State --</option>
+                                </select>
                             </div>
                         </div>
                         <div class="form-group">
